infra/k8s/photo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photo
  template:
    metadata:
      labels:
        app: photo
    spec:
      containers:
        - name: photo
          image: doyakonnga/photo
          resources:
            requests:
              cpu: 300m
              memory: 300Mi
            limits:
              cpu: 300m
              memory: 300Mi
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: photo-svc
spec:
  type: ClusterIP
  selector:
    app: photo
  ports:
    - name: photo
      protocol: TCP
      port: 3000
      targetPort: 3000
